--- a/Arq-Server-Side/exemplo-express/package.json
+++ b/Arq-Server-Side/exemplo-express/package.json
@@ -4,6 +4,7 @@
   "description": "Exemplo da aula-express",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Geovani",
